--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
+
+    <h1>About</h1>
     
     <script src="./js/app.js" ></script>
 
